# miniEDR

./: CMakeLists.txt  LICENSE  README.md
agent/: CMakeLists.txt
agent/config/: central_config.json  driver_policy.json  hooking.json  scanners.json  signer_trust.json
agent/rules/: README.md
agent/src/: main.cpp
agent/src/collectors/: api_hook_collector.cpp  api_hook_collector.h  driver_collector.cpp  driver_collector.h  etw_kernel_collector.cpp  etw_kernel_collector.h  etw_user_collector.cpp  etw_user_collector.h  sysmon_collector.cpp  sysmon_collector.h
agent/src/control/: central_config.cpp  central_config.h  central_http.cpp  central_http.h  central_manager.cpp  central_manager.h
agent/src/detection/: correlator.cpp  correlator.h  rule_engine.cpp  rule_engine.h
agent/src/driver/: driver_policy.cpp  driver_policy.h  signer_trust.cpp  signer_trust.h
agent/src/enrich/: process_enricher.cpp  process_enricher.h
agent/src/hooking/: README.md  apihook_injector.cpp  apihook_injector.h
agent/src/output/: alert_sinks.cpp  alert_sinks.h  central_sink.cpp  central_sink.h
agent/src/pipeline/: event_types.h  normalizer.cpp  normalizer.h
agent/src/response/: apihook_responder.cpp  apihook_responder.h  file_quarantine_responder.cpp  file_quarantine_responder.h  process_responder.cpp  process_responder.h  process_suspend_responder.cpp  process_suspend_responder.h  responder_iface.h  response_manager.cpp  response_manager.h  tamper_protection_responder.cpp  tamper_protection_responder.h
agent/src/sandbox/: README.md
agent/src/scanners/: hollows_hunter_adapter.cpp  hollows_hunter_adapter.h  pe_sieve_adapter.cpp  pe_sieve_adapter.h  process_runner.cpp  process_runner.h  scanner_iface.h  scanner_manager.cpp  scanner_manager.h
agent/src/scanners/yara/: yara_adapter.cpp  yara_adapter.h
agent/src/utils/: encoding.cpp  encoding.h  mini_json.h  win_path.cpp  win_path.h  xml_event_parser.cpp  xml_event_parser.h
docs/: architecture.md  scanners.md
driver/: README.md
driver/MiniEDRDrv/: MiniEDRDrv.inf  MiniEDRDrv.sln  MiniEDRDrv.vcxproj  MiniEDRDrv.vcxproj.filters  callbacks.c  callbacks.h  device.c  device.h  driver.c  driver.h  miniedr_ioctl.h  queue.c  queue.h
driver/include/: miniedr_ioctl.h
hooks/: ApiHookDll64.cpp  CMakeLists.txt
rules/: default_rules.json
rules/yara/: README.md
tools/sysmon/: sysmonconfig.xml
